// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rehydrating @supports rules should rehydrate the renderer cache 1`] = `
{
  "(display:grid) and (display:flex)colorgreen": {
    "className": "c",
    "declaration": "color:green",
    "media": "",
    "pseudo": "",
    "selector": ".c",
    "support": "(display:grid) and (display:flex)",
    "type": "RULE",
  },
  "(display:grid)colorblue": {
    "className": "b",
    "declaration": "color:blue",
    "media": "",
    "pseudo": "",
    "selector": ".b",
    "support": "(display:grid)",
    "type": "RULE",
  },
  "(display:grid)colorred": {
    "className": "a",
    "declaration": "color:red",
    "media": "",
    "pseudo": "",
    "selector": ".a",
    "support": "(display:grid)",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating @supports rules should rehydrate the renderer cache with specifityPrefix 1`] = `
{
  "(display:grid) and (display:flex)colorgreen": {
    "className": "c",
    "declaration": "color:green",
    "media": "",
    "pseudo": "",
    "selector": ".parentClass .c",
    "support": "(display:grid) and (display:flex)",
    "type": "RULE",
  },
  "(display:grid)colorblue": {
    "className": "b",
    "declaration": "color:blue",
    "media": "",
    "pseudo": "",
    "selector": ".parentClass .b",
    "support": "(display:grid)",
    "type": "RULE",
  },
  "(display:grid)colorred": {
    "className": "a",
    "declaration": "color:red",
    "media": "",
    "pseudo": "",
    "selector": ".parentClass .a",
    "support": "(display:grid)",
    "type": "RULE",
  },
}
`;
